syntax = "proto3";

package maintenance;

option go_package = "https://github.com/Servant-22/SchedulingService.git";

service MaintenanceService {
    rpc ScheduleAppointment (AppointmentRequest) returns (AppointmentResponse);
}

message AppointmentRequest {
    string user_id = 1;
    string task_description = 2;
    string preferred_time = 3;
}

message AppointmentResponse {
    string confirmation_id = 1;
    string scheduled_time = 2;
}
